# MLX8-W4-Multimodal-TransferLearning

./: .gitignore  .gitmodules  .gitmodules.bkup  pyproject.toml
.ben/: README.MD  dwnld_flickr30k.ipynb  readme.MD
.ben/notebooks/: dwnld_flickr30k.ipynb  notes.txt  test_model.ipynb  tokeniser_dev.ipynb
.ben/scratch/: mars_dwnsample.py  mars_mv_data.py  mars_zip_data.py  print_metadata.py  qwen_3Bn_test.py  runpod_setup.txt  workingClipSample.ipynb
.ben/scripts/: collate.py  dataset.py  decoder.py  img_embed.py  img_embedder copy.py  img_embedder.py  qwen_cap_gen.py  text_embed.py  text_embedder.py  train.py  train_dev.py
.charles/: gpu-setup.sh  unraid-local-setup.sh
.charles/multimodal/: .env.example  README.md  eval_sql.md  gradio_demo.py  multimodal_transfer_learing.py  tiny_decoder.py
.charles/qwenvl/: .env.example  __flaticon_png__.txt  duckdb_sql.md  flaticon.sh  flaticon_datasets.py  flaticon_datasets_gen.py  huggingface_download.md  ollama-vision.py  ollama_vision.py  test_fashion_mnist.py  test_flickr30k.py  test_google_vit.py  test_ollama_vision.py  test_openai_clip.py  test_qwen25_vl.py  test_qwen3_base.py  test_unsloth_4bit.py  traing_pair_gen.py  unsloth_4bit.py
.clement/sample/: workingClipSample.ipynb
course-materials/: README.md
