[project]
name = "mlx8-w4-multimodal-transferlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "pyarrow",
    "torchvision",
    "datasets",
    "tqdm",
    "wandb",
    "colorama",
    "pandas",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "numpy",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.0",
    "hdbscan",
    "scipy>=1.16.0",
    "transformers",
    "qwen-vl-utils[decord]==0.0.8",
    "accelerate",
    "torchaudio",
    "flash-attn",
    "unsloth[cu121-ampere-torch230]",
    "bitsandbytes",
    "unsloth-zoo",
    "litellm>=1.73.6",
    "duckdb>=1.3.1",
]

# uv add "unsloth[cu121-ampere-torch230] @ git+https://github.com/unslothai/unsloth.git"
[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

